--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ li:hover,
 }
 
 .title-secondary {
-  color: black;
+  color: #5c5858;
 }
 
 .page-title {
@@ -23,10 +23,20 @@ li:hover,
   align-items: center;
 }
 
-h1,
-h2 {
-  margin: 0;
+.page-title-image {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  row-gap: 1rem;
 }
+
+h1,
+h2,
+h3 {
+  margin: 0;
+  color: #5c5858;
+}
+
 ul {
   display: flex;
   column-gap: 1.5rem;
@@ -55,6 +65,13 @@ a {
   align-items: center;
 }
 
+.link {
+  text-decoration: dashed;
+  color: blue;
+  height: 100%;
+  display: inline;
+}
+
 main {
   max-width: 100vw;
   min-height: calc(100vh - 9rem);
@@ -68,7 +85,7 @@ main {
 
 .personagens-container {
   display: grid;
-  grid-template-columns:  1fr 2fr;
+  grid-template-columns: 1fr 2fr;
   margin-top: 2rem;
   column-gap: 1.5rem;
 }
@@ -102,6 +119,17 @@ button[type="submit"] {
   border-radius: 2rem;
 }
 
+button[type="button"] {
+  all: unset;
+  cursor: pointer;
+  background-color: #ff5f1b;
+  height: 2rem;
+  width: 7rem;
+  color: #fff;
+  text-align: center;
+  border-radius: 2rem;
+}
+
 .search-section {
   display: flex;
   column-gap: 1rem;
@@ -120,12 +148,13 @@ button[type="submit"] {
   transition: 0.4s;
 }
 
-.active, .accordion:hover {
+.active,
+.accordion:hover {
   background-color: #ccc;
 }
 
 .accordion:after {
-  content: '\002B';
+  content: "\002B";
   color: #777;
   font-weight: bold;
   float: right;
@@ -142,4 +171,106 @@ button[type="submit"] {
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
+}
+
+.card-section {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1rem;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  max-width: 300px;
+  height: 23rem;
+  max-height: 23rem;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 1px -1px,
+    rgba(0, 0, 0, 0.14) 0px 1px 1px 0px, rgba(0, 0, 0, 0.12) 0px 1px 3px 0px;
+  cursor: pointer;
+}
+
+.card:hover {
+  transform: scale(1.1);
+  transition: 0.1s;
+}
+
+h3 {
+  margin: 0;
+}
+
+.card-image {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  width: 300px;
+  height: 150px;
+  background-position: center;
+  /* Make the background image cover the area of the <div>, and clip the excess */
+  background-size: cover;
+}
+
+.card-title {
+  padding: 1rem 1rem 0 1rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.card-badge {
+  display: flex;
+  column-gap: 0.5rem;
+}
+
+.card-body {
+  padding: 0 1rem 1rem 1rem;
+}
+
+.badge,
+.display-badge {
+  all: unset;
+  cursor: pointer;
+  border: solid 1px #ff5f1b;
+  padding: 0.5rem;
+  border-radius: 2rem;
+  margin: 1rem 0;
+}
+
+.badge:hover,
+.badge-selected,
+.display-badge {
+  background-color: #ff5f1b;
+  color: #fff;
+  transition: 0.2s;
+}
+
+.technologies {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.technology {
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
+
+footer {
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+}
+
+#sobre {
+  margin-top: 1rem;
+}
+
+#tecnologias {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1rem;
 }
